<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="google_geo_api_key">AIzaSyBnIYieRdiJYaxAClcJ4KecW8bWE9kIju8</string>
    <string name="app_name">Tamaq</string>
    <string name="server_not_response">Сервер не отвечает</string>
    <string name="title_orders">Заказы</string>
    <string name="title_chat">Чат с клиентом</string>
    <string name="title_payment">Платежи</string>
    <string name="title_notification">Уведомления</string>
    <string name="title_profile">Кабинет</string>
    <string name="first_slide_main_text">Регистрация и начало работы</string>
    <string name="first_slide_second_text">Заполните информацию о себе.\nОжидайте подтверждения от модераторов.\nДоставляйте заказы и зарабатывайте.</string>
    <string name="second_slide_first_text">Заказы в ручном и авто режиме</string>
    <string name="second_slide_second_text">Установите, сколько хотите зарабатывать.\nНастройте предпочтения для автоставки и принимайте заказы автоматически.</string>
    <string name="third_slide_first_text">Будьте на связи</string>
    <string name="third_slide_second_text">Во время работы с сервисом\nпередавайте данные о своем геоположении на сервер.</string>
    <string name="fourth_slide_first_text">Следите за финансами</string>
    <string name="fourth_slide_second_text">Стоимость каждого заказа\nбудет вычитаться с вашего счета.\nВовремя пополняйте баланс и смотрите его историю.</string>
    <string name="registration_btn_text">Регистрация</string>
    <string name="enter_btn_text">Вход</string>
    <string name="skip">Пропустить</string>
    <string name="welcome_to_tamaq">Добро пожаловать\nв сервис доставки “Tamaq”</string>
    <string name="welcome_screen_second_text">Для начала работы вам необходимо войти или зарегистрироваться.</string>
    <string name="add_photo_title">ДОБАВИТЬ ФОТО</string>
    <string name="add_first_identity_photo">Добавьте фото первой страницы\nудостоверения личности</string>
    <string name="add_second_identity_photo">Добавьте фото второй страницы\nудостоверения личности</string>
    <string name="photo_1">Фото №1</string>
    <string name="photo_2">Фото №2</string>
    <string name="menu_take_photo">Сделать фото</string>
    <string name="menu_choose_from_gallery">Выбрать из галереи</string>
    <string name="menu_delete_photo">Удалить фото</string>
    <string name="identification">Удостоверение личности</string>
    <string name="name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="mobile_number">Номер мобильного</string>
    <string name="rnn">РНН</string>
    <string name="age">Возраст</string>
    <string name="work_city">Город работы</string>
    <string name="agree_text">Я соглашаюсь с правилами использования сервиса и политикой конфиденциальности</string>
    <string name="agree">Подтвердить</string>
    <string name="enter_to_account">Войти в учетную запись</string>
    <string name="chosenOneIdentificationPhoto">Выбрана 1 фотография</string>
    <string name="chosenTwoIdentificationPhoto">Выбрано 2 фотографии</string>
    <string name="login">Вход</string>
    <string name="new_order">Новый заказ</string>
    <string name="can_make_it">Запрос на исполнительство</string>
    <string name="order_cancel">Отмена заказа</string>
    <string name="get_code_and_enter">получить код и войти</string>
    <string name="registration_action">Зарегистрироваться</string>
    <string name="enter_your_phone_number">Введите ваш номер телефона</string>
    <string name="enter_code">Введите код</string>
    <string name="code_send_to_you_number">Код выслан на номер %1$s</string>
    <string name="code_from_sms">Код из смс</string>
    <string name="i_do_not_have_sms">Мне не приходит смс</string>
    <string name="registration">Регистрация</string>
    <string name="thanks_for_registration_title">Спасибо за регистрацию.</string>
    <string name="thanks_for_registration_description">Ваш статус как курьера проверяется, ожидайте уведомления.</string>
    <string name="wrong_sms_code">Неправильный код.\nПовторите попытку</string>
    <string name="ok">OK</string>
    <string name="sms_sent_again">Вам выслано еще одно сообщение с кодом</string>
    <string name="please_call_technical_support_1">Пожалуйста, свяжитесь с поддержкой</string>
    <string name="please_call_technical_support_2">support@tamaq.kz</string>
    <string name="info">Информация</string>
    <string name="info_about_order">Информация о заказе</string>
    <string name="take_orders">Принимать заказы</string>
    <string name="not_to_accept">Не принимать</string>
    <string name="all_city">Весь город</string>
    <string name="all_city_description">Автоматическая ставка будет поставлена на заказ из любой точки города.</string>
    <string name="around_me">Вокруг меня</string>
    <string name="around_me_description">Автоматическая ставка создает окружность, где центральная точка — ваше геоположение. Окружность передвигается вместе с вами и ставка делается на каждый заказ, который охватывается кругом.</string>
    <string name="single_region">Отдельный район</string>
    <string name="region">Район</string>
    <string name="single_region_description">Автоматическая ставка будет ставиться на заказы из этого района.</string>
    <string name="you_will_not_receive_orders">Вам не будут поступать заказы.</string>
    <string name="consider_all_orders">Рассматриваю все заказы</string>
    <string name="consider_all_orders_description">Вам будут поступать все заказы, и вы сможете принять их или отказаться.</string>
    <string name="auto_rate">Автоставка</string>
    <string name="auto_rate_description">Вам будут автоматически поступать заказы, соответствующие параметрам автоставки.</string>
    <string name="payment_for_work">Оплата работы</string>
    <string name="select_minimum_payment">Укажите минимальную оплату за заказ, которую вы хотели бы получать.</string>
    <string name="orders_from">Заказы от</string>
    <string name="auto_rate_parameters">Параметры автоставки</string>
    <string name="transport">Транспорт</string>
    <string name="title_auto_rate_params">Параметры автоставки</string>
    <string name="auto_rate_geography">География автоставки</string>
    <string name="not_selected">Не выбран</string>
    <string name="minutes_count">%1$d мин.</string>
    <string name="maximum_delivery_time">Максимальное время доставки</string>
    <string name="minimum_client_rating">Минимальный рейтинг клиента</string>
    <string name="maximum_kitchen_payment">Максимальная цена кухни</string>
    <string name="working_radius">Радиус окружности</string>
    <string name="kilometers_value">%d км</string>
    <string name="region_select_title">Выбор района</string>
    <string name="by_default">По умолчанию</string>
    <string name="configured">Настроены</string>
    <string name="arrive_restaurant_minutes">Прибудьте в ресторан в %1$s, чтобы забрать заказ.</string>
    <string name="country">Страна</string>
    <string name="search">Поиск</string>
    <string name="search_with_ellipsis">Поиск…</string>
    <string name="order_search_with_ellipsis">Поиск заказа…</string>
    <string name="country_search_hint">Поиск страны…</string>
    <string name="working_city">Город работы</string>
    <string name="nothing_to_display">По вашему запросу ничего не найдено</string>
    <string name="try_again">Попробуйте еще раз</string>
    <string name="money">Деньги</string>
    <string name="payment_for_order">Прибыль за заказ</string>
    <string name="addresses">Адреса</string>
    <string name="address_format_with_street_number">%1$s, %2$s</string>
    <string name="address_format_detailed">%1$s, %2$s, этаж %3$s</string>
    <string name="route">Маршрут</string>
    <string name="accept_order">Принять заказ</string>
    <string name="to_cancel">Отказаться</string>
    <string name="time_is_over">Время вышло</string>
    <string name="time_is_over_dialog_title">Время вышло.</string>
    <string name="time_is_over_dialog_description">Вы не успели принять заказ. Ожидайте поступления новых заказов.</string>
    <string name="time">Время</string>
    <string name="refuse_the_order_dialog_title">Отказаться от заказа?</string>
    <string name="refuse_the_order_dialog_description">Вы действительно хотите отказаться от этого заказа?</string>
    <string name="refuse_action">Отказаться</string>
    <string name="not_refuse_action">Не отказываться</string>
    <string name="accept_order_dialog_title">Принять заказ.</string>
    <string name="accept_order_dialog_description">Нажав "Принять" вы обязуетесь осуществить доставку заказа в случае выбора вашей кандидатуры.</string>
    <string name="accept_action">Принять</string>
    <string name="cancel_action">Отменить</string>
    <string name="cancel">Отмена</string>
    <string name="you_accepted_order">Вы откликнулись на этот заказ.</string>
    <string name="wait_for_customer_choice">Подождите, заказчик делает выбор курьера…</string>
    <string name="chat_with_client">Чат с клиентом</string>
    <string name="empty_chat_title">В чате нет переписки.</string>
    <string name="empty_chat_description">Здесь будет отображаться ваша переписка с заказчиками.</string>
    <string name="dismiss">Отменить</string>
    <string name="dialog_removed">Переписка удалена</string>
    <string name="hint_write_msg">Напишите сообщение…</string>
    <string name="order_completed">Заказ завершен.</string>
    <string name="order_completed_without_dot">Заказ завершен</string>
    <string name="no_messages_in_chat">В чате не было переписки с заказчиком.</string>
    <string name="disabled_geolocation_message_title">У вас отключена геолокация.</string>
    <string name="disabled_geolocation_title">Отключена геолокация</string>
    <string name="not_supported_city_title">Не поддерживаемый город</string>
    <string name="not_supported_city_title_with_dot">Не поддерживаемый город.</string>
    <string name="not_supported_city_description">Спасибо за регистрацию. Сеть Tamaq пока не добралась до вашего города. Когда это случится, Вам прийдет СМС.</string>
    <string name="set_up_action">Настроить</string>
    <string name="change_city">Изменить город</string>
    <string name="disabled_geolocation_message_description">Для более корректной работы приложения и обеспечения лучшего взаимодействия с заказчиками включите геолокацию в настройках.</string>
    <string name="go_to_map">Перейти на карту</string>
    <string name="payment_for_delivery">Прибыль за доставку</string>
    <string name="customer_must">Клиент должен</string>
    <string name="need_change_from">Нужна сдача с</string>
    <string name="contact">Связь</string>
    <string name="dispatcher">Диспетчер</string>
    <string name="restaurant">Ресторан</string>
    <string name="restaurant_address">Адрес ресторана “%1$s”</string>
    <string name="client_name">Заказчик %1$s</string>
    <string name="cancel_order">Отменить заказ</string>
    <string name="go_to_restaurant">Отправляюсь в ресторан</string>
    <string name="arrived_in_restaurant">Прибыл в ресторан</string>
    <string name="go_to_customer">Отправляюсь к заказчику</string>
    <string name="arrived_to_customer">Прибыл к заказчику</string>
    <string name="complete_order">Завершить заказ</string>
    <string name="congratulations">Поздравляем.</string>
    <string name="congratulations_without_dot">Поздравляем</string>
    <string name="you_successfully_passed_check">Вы успешно прошли проверку и теперь можете выполнять заказы.</string>
    <string name="exit_dialog">Выйти</string>
    <string name="discard_dialog">ОТМЕНА</string>
    <string name="exit_title">Выйти из учетной записи “Tamaq”?</string>
    <string name="access_denied_title">Кажется вас заблокировали.</string>
    <string name="access_denied_description">Ваш профиль был заблокирован.\nВы можете связаться с администрацией Tamak написав на электронную почту\nhelp@tamak.com.</string>
</resources>