<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:minWidth="280dp"
              android:orientation="vertical">

    <com.tamaq.courier.widgets.TypeFaceTextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:text="@string/exit_title"
        android:textColor="@color/black_87"
        android:textSize="20sp"
        app:typeface="Roboto_Medium.ttf"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        android:paddingEnd="14dp"
        android:paddingStart="14dp">

        <Button
            android:id="@+id/negativeButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discard_dialog"/>

        <Space
            android:layout_width="6dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/positiveButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit_dialog"
            android:textColor="@color/windows_blue"/>

    </LinearLayout>

</LinearLayout>

